kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api-deployment
  labels:
    app: inventory-api
spec:
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
        - name: inventory-api-container
          image: docker.io/macsi21/inventory-api:v9
          readinessProbe:
            healthCheck:
              path: "/hc"
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
          ports:
            -  containerPort: 80
