kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-clusterip
  labels:
    app: inventory-api
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 80
  selector:
    app: inventory-api
